# thesis-project

./: .gitignore  README.md  set_up.sh
chassis/ackermann_chassis_description/: CMakeLists.txt  ackermann_chassis_arduino.xml  package.xml
chassis/ackermann_chassis_description/config/: ackermann_controllers.yaml
chassis/ackermann_chassis_description/include/ackermann_chassis/: ArduinoSerialHardware.hpp
chassis/ackermann_chassis_description/launch/: ackermann_control.launch.py  view_model.launch.py
chassis/ackermann_chassis_description/rviz/: view_model.rviz
chassis/ackermann_chassis_description/src/: ArduinoSerialHardware.cpp
chassis/ackermann_chassis_description/urdf/: ackermann.urdf.xacro
chassis/cmd_vel_ackermann_bridge/: package.xml  setup.cfg  setup.py
chassis/cmd_vel_ackermann_bridge/cmd_vel_ackermann_bridge/: cmd_vel_to_ackermann.py
combined_robot/combined_movit_config/: .setup_assistant  CMakeLists.txt  package.xml
combined_robot/combined_movit_config/config/: combined_robot.ros2_control.xacro  combined_robot.srdf  combined_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
combined_robot/combined_movit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
combined_robot/combined_robot_description/: CMakeLists.txt  package.xml
combined_robot/combined_robot_description/config/: nav2_nvblox_params.yaml
combined_robot/combined_robot_description/launch/: ackermann_control.launch.py  cumotion_launch.py  full_system.launch.py
combined_robot/combined_robot_description/mesh/: camera_mesh.stl
combined_robot/combined_robot_description/rviz/: combined_config.rviz
combined_robot/combined_robot_description/urdf/: ackermann.urdf.xacro  arm5dof_armbase.urdf  combined_robot.urdf.xacro
models/apple/: apple.obj.mtl
models/baseball_model/: baseball.mtl
models/tennis_ball/: tennis_ball.obj.mtl
robot_arm/arm_moveit_config/: .setup_assistant  package.xml
robot_arm/arm_moveit_config/config/: arm5dof.ros2_control.xacro  arm5dof.srdf  arm5dof.urdf.xacro  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
robot_arm/arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot_arm/final_combined_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robot_arm/final_combined_moveit_config/config/: combined_robot.srdf  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml
robot_arm/final_combined_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py  (+1 more)
robot_arm/robot_control/: package.xml  setup.py
robot_arm/robot_interface/: CMakeLists.txt  package.xml
(+29 files in other folders)
