<?xml version="1.0"?>
<package format="3">
  <name>ackermann_chassis_description</name>
  <version>0.0.1</version>
  <description>Ackermann chassis model and ros2_control hardware.</description>
  <maintainer email="jarvis@todo.todo">jarvis</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- tools for viewing -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- hardware plugin (compiled libs) -->
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <!-- (keep if you launch controllers from this pkg) -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ackermann_steering_controller</exec_depend>

  <export>
    <hardware_interface plugin="${prefix}/ackermann_chassis_arduino.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
